Bug 325532 - Akonadi crashes while idle
Summary: Akonadi crashes while idle
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: 4.11
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Christian Mollekopf
URL:
Keywords: drkonqi
: 325911 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-02 06:21 UTC by Oleg
Modified: 2014-03-31 06:37 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.74 KB, text/plain)
2013-10-12 13:43 UTC, Christopher Yeleighton
Details
New crash information added by DrKonqi (5.76 KB, text/plain)
2013-10-12 16:49 UTC, Christopher Yeleighton
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg 2013-10-02 06:21:38 UTC
Application: akonadi_imap_resource (4.11)
KDE Platform Version: 4.11.1
Qt Version: 4.8.5
Operating System: Linux 3.11.1-200.fc19.x86_64 x86_64
Distribution (Platform): Fedora RPMs

-- Information about the crash:
Akonadi randomly crashes while idle

The crash can be reproduced sometimes.

-- Backtrace:
Application: o.khudyakov@initi.ru типа Почтовый сервер IMAP (akonadi_imap_resource), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
81	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f1a322f98c0 (LWP 2112))]

Thread 3 (Thread 0x7f1a258da700 (LWP 12333)):
#0  0x0000003d40a86f9a in g_mutex_get_impl (mutex=0x7f1a20001300) at gthread-posix.c:121
#1  0x0000003d40a87279 in g_mutex_unlock (mutex=mutex@entry=0x7f1a20001300) at gthread-posix.c:229
#2  0x0000003d40a48006 in g_main_context_iterate (context=context@entry=0x7f1a20001300, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3679
#3  0x0000003d40a481fc in g_main_context_iteration (context=0x7f1a20001300, may_block=1) at gmain.c:3762
#4  0x0000003d487a7166 in QEventDispatcherGlib::processEvents (this=0x7f1a2030b400, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#5  0x0000003d48778ecf in QEventLoop::processEvents (this=this@entry=0x7f1a258d9d20, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003d487791c5 in QEventLoop::exec (this=this@entry=0x7f1a258d9d20, flags=...) at kernel/qeventloop.cpp:204
#7  0x0000003d4867866f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:536
#8  0x0000003d4867ad0f in QThreadPrivate::start (arg=0x1760e00) at thread/qthread_unix.cpp:338
#9  0x0000003d3de07c53 in start_thread (arg=0x7f1a258da700) at pthread_create.c:308
#10 0x0000003d3d6f5e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f1a250d9700 (LWP 12426)):
#0  0x0000003d487a742a in testAndSetOrdered (newValue=1, expectedValue=0, this=0x18a2050) at ../../src/corelib/arch/qatomic_x86_64.h:145
#1  testAndSetAcquire (newValue=1, expectedValue=0, this=0x18a2050) at ../../src/corelib/arch/qatomic_x86_64.h:267
#2  tryLockInline (this=0x1764bd8) at ../../src/corelib/thread/qmutex.h:181
#3  lockInline (this=0x1764bd8) at ../../src/corelib/thread/qmutex.h:189
#4  QMutexLocker (m=0x1764bd8, this=<synthetic pointer>) at ../../src/corelib/thread/qmutex.h:109
#5  canWaitLocked (this=0x1764b90) at ../../src/corelib/thread/qthread_p.h:227
#6  postEventSourcePrepare (s=0x7f1a18003d20, timeout=timeout@entry=0x7f1a250d8b64) at kernel/qeventdispatcher_glib.cpp:263
#7  0x0000003d40a4779d in g_main_context_prepare (context=context@entry=0x7f1a18007660, priority=priority@entry=0x7f1a250d8be8) at gmain.c:3328
#8  0x0000003d40a48013 in g_main_context_iterate (context=context@entry=0x7f1a18007660, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3681
#9  0x0000003d40a481fc in g_main_context_iteration (context=0x7f1a18007660, may_block=1) at gmain.c:3762
#10 0x0000003d487a7166 in QEventDispatcherGlib::processEvents (this=0x7f1a1801c840, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#11 0x0000003d48778ecf in QEventLoop::processEvents (this=this@entry=0x7f1a250d8d20, flags=...) at kernel/qeventloop.cpp:149
#12 0x0000003d487791c5 in QEventLoop::exec (this=this@entry=0x7f1a250d8d20, flags=...) at kernel/qeventloop.cpp:204
#13 0x0000003d4867866f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:536
#14 0x0000003d4867ad0f in QThreadPrivate::start (arg=0x182d730) at thread/qthread_unix.cpp:338
#15 0x0000003d3de07c53 in start_thread (arg=0x7f1a250d9700) at pthread_create.c:308
#16 0x0000003d3d6f5e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f1a322f98c0 (LWP 2112)):
[KCrash Handler]
#6  0x0000003d4da555f0 in vtable for KPushButton () from /lib64/libkdeui.so.5
#7  0x0000003d487843f4 in QMetaObject::invokeMethod (obj=0x1738120, member=member@entry=0x3d6a85fcae "doSslErrorHandlerResponse", type=type@entry=Qt::AutoConnection, ret=..., val0=..., val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:1166
#8  0x0000003d6a842648 in invokeMethod (val9=..., val8=..., val7=..., val6=..., val5=..., val4=..., val3=..., val2=..., val1=..., val0=..., member=0x3d6a85fcae "doSslErrorHandlerResponse", obj=<optimized out>) at /usr/include/QtCore/qobjectdefs.h:434
#9  KIMAP::SessionThread::sslErrorHandlerResponse (this=<optimized out>, response=true) at /usr/src/debug/kdepimlibs-4.11.1/kimap/sessionthread.cpp:301
#10 0x0000003d4879232e in QObject::event (this=0x180aed0, e=<optimized out>) at kernel/qobject.cpp:1194
#11 0x0000003d4b7c84dc in QApplicationPrivate::notify_helper (this=this@entry=0x15142b0, receiver=receiver@entry=0x180aed0, e=e@entry=0x7f1a20200bf0) at kernel/qapplication.cpp:4562
#12 0x0000003d4b7ceaa0 in QApplication::notify (this=this@entry=0x7fff5891b900, receiver=receiver@entry=0x180aed0, e=e@entry=0x7f1a20200bf0) at kernel/qapplication.cpp:4348
#13 0x0000003d4d63fd2a in KApplication::notify (this=0x7fff5891b900, receiver=0x180aed0, event=0x7f1a20200bf0) at /usr/src/debug/kdelibs-4.11.1/kdeui/kernel/kapplication.cpp:311
#14 0x0000003d4877a26d in QCoreApplication::notifyInternal (this=0x7fff5891b900, receiver=receiver@entry=0x180aed0, event=event@entry=0x7f1a20200bf0) at kernel/qcoreapplication.cpp:949
#15 0x0000003d4877d1df in sendEvent (event=0x7f1a20200bf0, receiver=0x180aed0) at kernel/qcoreapplication.h:231
#16 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x14d8830) at kernel/qcoreapplication.cpp:1573
#17 0x0000003d4877d683 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1466
#18 0x0000003d487a7883 in sendPostedEvents () at kernel/qcoreapplication.h:236
#19 postEventSourceDispatch (s=s@entry=0x1506810) at kernel/qeventdispatcher_glib.cpp:280
#20 0x0000003d40a47e06 in g_main_dispatch (context=0x15145d0) at gmain.c:3054
#21 g_main_context_dispatch (context=context@entry=0x15145d0) at gmain.c:3630
#22 0x0000003d40a48158 in g_main_context_iterate (context=context@entry=0x15145d0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3701
#23 0x0000003d40a481fc in g_main_context_iteration (context=0x15145d0, may_block=1) at gmain.c:3762
#24 0x0000003d487a7145 in QEventDispatcherGlib::processEvents (this=0x14da110, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#25 0x0000003d4b864fc6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#26 0x0000003d48778ecf in QEventLoop::processEvents (this=this@entry=0x7fff58919e00, flags=...) at kernel/qeventloop.cpp:149
#27 0x0000003d487791c5 in QEventLoop::exec (this=this@entry=0x7fff58919e00, flags=...) at kernel/qeventloop.cpp:204
#28 0x0000003d4bc68a2c in QDialog::exec (this=0x1773f40) at dialogs/qdialog.cpp:562
#29 0x0000003d4d5b3a52 in KMessageBox::createKMessageBox (dialog=dialog@entry=0x1773f40, icon=..., text=..., strlist=..., ask=..., checkboxReturn=checkboxReturn@entry=0x7fff5891a110, options=..., details=..., notifyType=notifyType@entry=QMessageBox::Warning) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:344
#30 0x0000003d4d5b3c91 in KMessageBox::createKMessageBox (dialog=dialog@entry=0x1773f40, icon=icon@entry=QMessageBox::Warning, text=..., strlist=..., ask=..., checkboxReturn=checkboxReturn@entry=0x7fff5891a110, options=..., details=...) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:159
#31 0x0000003d4d5b6cc8 in KMessageBox::warningYesNoCancelListWId (parent_id=0, text=..., strlist=..., caption=..., buttonYes_=..., buttonNo_=..., buttonCancel_=..., dontAskAgainName=..., options=...) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:802
#32 0x0000003d4d5b6f0a in KMessageBox::warningYesNoCancelList (parent=parent@entry=0x0, text=..., strlist=..., caption=..., buttonYes=..., buttonNo=..., buttonCancel=..., dontAskAgainName=..., options=...) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:760
#33 0x0000003d4d5b6f72 in KMessageBox::warningYesNoCancel (parent=parent@entry=0x0, text=..., caption=..., buttonYes=..., buttonNo=..., buttonCancel=..., dontAskAgainName=..., options=...) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:735
#34 0x0000003d522182c8 in KIO::SslUi::askIgnoreSslErrors (uiData=..., storedRules=KIO::SslUi::RecallAndStoreRules) at /usr/src/debug/kdelibs-4.11.1/kio/kssl/sslui.cpp:82
#35 0x0000003d6a83cbe3 in KIMAP::SessionPrivate::handleSslError (this=0x1739510, errorData=...) at /usr/src/debug/kdepimlibs-4.11.1/kimap/session.cpp:128
#36 0x0000003d4879232e in QObject::event (this=0x1739510, e=<optimized out>) at kernel/qobject.cpp:1194
#37 0x0000003d4b7c84dc in QApplicationPrivate::notify_helper (this=this@entry=0x15142b0, receiver=receiver@entry=0x1739510, e=e@entry=0x7f1a20014f30) at kernel/qapplication.cpp:4562
#38 0x0000003d4b7ceaa0 in QApplication::notify (this=this@entry=0x7fff5891b900, receiver=receiver@entry=0x1739510, e=e@entry=0x7f1a20014f30) at kernel/qapplication.cpp:4348
#39 0x0000003d4d63fd2a in KApplication::notify (this=0x7fff5891b900, receiver=0x1739510, event=0x7f1a20014f30) at /usr/src/debug/kdelibs-4.11.1/kdeui/kernel/kapplication.cpp:311
#40 0x0000003d4877a26d in QCoreApplication::notifyInternal (this=0x7fff5891b900, receiver=receiver@entry=0x1739510, event=event@entry=0x7f1a20014f30) at kernel/qcoreapplication.cpp:949
#41 0x0000003d4877d1df in sendEvent (event=0x7f1a20014f30, receiver=0x1739510) at kernel/qcoreapplication.h:231
#42 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x14d8830) at kernel/qcoreapplication.cpp:1573
#43 0x0000003d4877d683 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1466
#44 0x0000003d487a7883 in sendPostedEvents () at kernel/qcoreapplication.h:236
#45 postEventSourceDispatch (s=s@entry=0x1506810) at kernel/qeventdispatcher_glib.cpp:280
#46 0x0000003d40a47e06 in g_main_dispatch (context=0x15145d0) at gmain.c:3054
#47 g_main_context_dispatch (context=context@entry=0x15145d0) at gmain.c:3630
#48 0x0000003d40a48158 in g_main_context_iterate (context=context@entry=0x15145d0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3701
#49 0x0000003d40a481fc in g_main_context_iteration (context=0x15145d0, may_block=1) at gmain.c:3762
#50 0x0000003d487a7145 in QEventDispatcherGlib::processEvents (this=0x14da110, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#51 0x0000003d4b864fc6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#52 0x0000003d48778ecf in QEventLoop::processEvents (this=this@entry=0x7fff5891ab40, flags=...) at kernel/qeventloop.cpp:149
#53 0x0000003d487791c5 in QEventLoop::exec (this=this@entry=0x7fff5891ab40, flags=...) at kernel/qeventloop.cpp:204
#54 0x0000003d4bc68a2c in QDialog::exec (this=0x176c990) at dialogs/qdialog.cpp:562
#55 0x0000003d4d5b3a52 in KMessageBox::createKMessageBox (dialog=dialog@entry=0x176c990, icon=..., text=..., strlist=..., ask=..., checkboxReturn=checkboxReturn@entry=0x7fff5891ae50, options=..., details=..., notifyType=notifyType@entry=QMessageBox::Warning) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:344
#56 0x0000003d4d5b3c91 in KMessageBox::createKMessageBox (dialog=dialog@entry=0x176c990, icon=icon@entry=QMessageBox::Warning, text=..., strlist=..., ask=..., checkboxReturn=checkboxReturn@entry=0x7fff5891ae50, options=..., details=...) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:159
#57 0x0000003d4d5b6cc8 in KMessageBox::warningYesNoCancelListWId (parent_id=0, text=..., strlist=..., caption=..., buttonYes_=..., buttonNo_=..., buttonCancel_=..., dontAskAgainName=..., options=...) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:802
#58 0x0000003d4d5b6f0a in KMessageBox::warningYesNoCancelList (parent=parent@entry=0x0, text=..., strlist=..., caption=..., buttonYes=..., buttonNo=..., buttonCancel=..., dontAskAgainName=..., options=...) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:760
#59 0x0000003d4d5b6f72 in KMessageBox::warningYesNoCancel (parent=parent@entry=0x0, text=..., caption=..., buttonYes=..., buttonNo=..., buttonCancel=..., dontAskAgainName=..., options=...) at /usr/src/debug/kdelibs-4.11.1/kdeui/dialogs/kmessagebox.cpp:735
#60 0x0000003d522182c8 in KIO::SslUi::askIgnoreSslErrors (uiData=..., storedRules=KIO::SslUi::RecallAndStoreRules) at /usr/src/debug/kdelibs-4.11.1/kio/kssl/sslui.cpp:82
#61 0x0000003d6a83cbe3 in KIMAP::SessionPrivate::handleSslError (this=0x1771e90, errorData=...) at /usr/src/debug/kdepimlibs-4.11.1/kimap/session.cpp:128
#62 0x0000003d4879232e in QObject::event (this=0x1771e90, e=<optimized out>) at kernel/qobject.cpp:1194
#63 0x0000003d4b7c84dc in QApplicationPrivate::notify_helper (this=this@entry=0x15142b0, receiver=receiver@entry=0x1771e90, e=e@entry=0x7f1a1801b430) at kernel/qapplication.cpp:4562
#64 0x0000003d4b7ceaa0 in QApplication::notify (this=this@entry=0x7fff5891b900, receiver=receiver@entry=0x1771e90, e=e@entry=0x7f1a1801b430) at kernel/qapplication.cpp:4348
#65 0x0000003d4d63fd2a in KApplication::notify (this=0x7fff5891b900, receiver=0x1771e90, event=0x7f1a1801b430) at /usr/src/debug/kdelibs-4.11.1/kdeui/kernel/kapplication.cpp:311
#66 0x0000003d4877a26d in QCoreApplication::notifyInternal (this=0x7fff5891b900, receiver=receiver@entry=0x1771e90, event=event@entry=0x7f1a1801b430) at kernel/qcoreapplication.cpp:949
#67 0x0000003d4877d1df in sendEvent (event=0x7f1a1801b430, receiver=0x1771e90) at kernel/qcoreapplication.h:231
#68 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x14d8830) at kernel/qcoreapplication.cpp:1573
#69 0x0000003d4877d683 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1466
#70 0x0000003d487a7883 in sendPostedEvents () at kernel/qcoreapplication.h:236
#71 postEventSourceDispatch (s=s@entry=0x1506810) at kernel/qeventdispatcher_glib.cpp:280
#72 0x0000003d40a47e06 in g_main_dispatch (context=0x15145d0) at gmain.c:3054
#73 g_main_context_dispatch (context=context@entry=0x15145d0) at gmain.c:3630
#74 0x0000003d40a48158 in g_main_context_iterate (context=context@entry=0x15145d0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3701
#75 0x0000003d40a481fc in g_main_context_iteration (context=0x15145d0, may_block=1) at gmain.c:3762
#76 0x0000003d487a7145 in QEventDispatcherGlib::processEvents (this=0x14da110, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#77 0x0000003d4b864fc6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#78 0x0000003d48778ecf in QEventLoop::processEvents (this=this@entry=0x7fff5891b870, flags=...) at kernel/qeventloop.cpp:149
#79 0x0000003d487791c5 in QEventLoop::exec (this=this@entry=0x7fff5891b870, flags=...) at kernel/qeventloop.cpp:204
#80 0x0000003d4877e45b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1221
#81 0x0000003d4b7c6c9c in QApplication::exec () at kernel/qapplication.cpp:3823
#82 0x0000003d5c559de3 in Akonadi::ResourceBase::init (r=0x16e3890) at /usr/src/debug/kdepimlibs-4.11.1/akonadi/resourcebase.cpp:548
#83 0x000000000041dcb3 in int Akonadi::ResourceBase::init<ImapResource>(int, char**) ()
#84 0x0000003d3d621b75 in __libc_start_main (main=0x416440 <main>, argc=3, ubp_av=0x7fff5891ba18, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff5891ba08) at libc-start.c:274
#85 0x00000000004165c5 in _start ()

Reported using DrKonqi
Comment 1 Christopher Yeleighton 2013-10-12 13:43:32 UTC
Created attachment 82799 [details]
New crash information added by DrKonqi

akonadi_imap_resource (4.10) on KDE Platform 4.10.5 "release 1" using Qt 4.8.4

- What I was doing when the application crashed:

The IMAP client asked me to acknowledge that the server certificate is invalid; I told the client to accept the certificate forever.

-- Backtrace (Reduced):
#8  0x00007fded1dfa4b7 in invokeMethod (val9=..., val8=..., val7=..., val6=..., val5=..., val4=..., val3=..., val2=..., val1=..., val0=..., member=0x7fded1e1fd3e "sslErrorHandlerResponse", obj=<optimized out>) at /usr/include/QtCore/qobjectdefs.h:434
#9  KIMAP::SessionPrivate::handleSslError (this=0x1f26d20, errorData=...) at /usr/src/debug/kdepimlibs-4.10.5/kimap/session.cpp:121
#10 0x00007fded31bc77e in QObject::event (this=0x1fa7b70, e=<optimized out>) at kernel/qobject.cpp:1203
#11 0x00007fded255186c in QApplicationPrivate::notify_helper (this=this@entry=0x1d76380, receiver=receiver@entry=0x1fa7b70, e=e@entry=0x7fdeb401f380) at kernel/qapplication.cpp:4562
#12 0x00007fded2555ceb in QApplication::notify (this=0x7fff97e11020, receiver=0x1fa7b70, e=0x7fdeb401f380) at kernel/qapplication.cpp:4423
Comment 2 Christopher Yeleighton 2013-10-12 16:49:01 UTC
Created attachment 82802 [details]
New crash information added by DrKonqi

akonadi_imap_resource (4.10) on KDE Platform 4.10.5 "release 1" using Qt 4.8.4

- What I was doing when the application crashed:

The IMAP client asked me to acknowledge that the server certificate is invalid; I told the client to accept the certificate forever.

-- Backtrace (Reduced):
#7  0x00007f8db54334b7 in invokeMethod (val9=..., val8=..., val7=..., val6=..., val5=..., val4=..., val3=..., val2=..., val1=..., val0=..., member=0x7f8db5458d3e "sslErrorHandlerResponse", obj=<optimized out>) at /usr/include/QtCore/qobjectdefs.h:434
#8  KIMAP::SessionPrivate::handleSslError (this=0x2096440, errorData=...) at /usr/src/debug/kdepimlibs-4.10.5/kimap/session.cpp:121
#9  0x00007f8db67f577e in QObject::event (this=0x2136670, e=<optimized out>) at kernel/qobject.cpp:1203
#10 0x00007f8db5b8a86c in QApplicationPrivate::notify_helper (this=this@entry=0x1dbf380, receiver=receiver@entry=0x2136670, e=e@entry=0x7f8d98023100) at kernel/qapplication.cpp:4562
#11 0x00007f8db5b8eceb in QApplication::notify (this=0x7fffaaa45b60, receiver=0x2136670, e=0x7f8d98023100) at kernel/qapplication.cpp:4423
Comment 3 Kevin Ottens 2013-11-16 07:29:25 UTC
The IMAP resource has a new maintainer, reassigning to him.
Comment 4 Christian Mollekopf 2013-12-04 08:29:30 UTC
*** Bug 325911 has been marked as a duplicate of this bug. ***
Comment 5 Christian Mollekopf 2013-12-10 22:24:14 UTC
Git commit 9a4a735b4475d34bfb9b7f7292ea391b40f6c070 by Christian Mollekopf.
Committed on 10/12/2013 at 22:05.
Pushed by cmollekopf into branch 'master'.

Avoid crash if the session was destroyed while the dialog was open.

M  +5    -1    kimap/session.cpp

http://commits.kde.org/kdepimlibs/9a4a735b4475d34bfb9b7f7292ea391b40f6c070
Comment 6 Juraj Variny 2014-02-04 10:09:42 UTC
It is still crashing in same way in 4.12.1, when it is scheduled to get out? Thanks.
Comment 7 Jekyll Wu 2014-03-31 06:36:36 UTC
Why isn't the fix contained the KDE/4.12 branch ?