Avoid crash if the session was destroyed while the dialog was open.

BUG: 325532